--- a/assets/css/fullpage-false.sass
+++ b/assets/css/fullpage-false.sass
@@ -8,8 +8,7 @@ html.fullpage-false
     overflow: scroll
     position: relative
 
-  #fullpage1,
-  #fullpage2
+  .page-id
     height: auto
     overflow: scroll
     position: relative
