--- a/assets/css/media.sass
+++ b/assets/css/media.sass
@@ -16,6 +16,11 @@
   width: 65%
   padding-bottom: 112%
 
+.squash
+  width: 90%
+  margin-left: 5%
+  padding-bottom: 89%
+
 .embed-container iframe,
 .embed-container object,
 .embed-container embed
@@ -64,6 +69,7 @@
     max-height: 100%
     width: initial
 
+
 @media (max-width: 1100px)
 
   .mobile
@@ -97,3 +103,4 @@
     .section
       .columns
         width: 100%
+
