--- a/views/case-studies/big-and-bold.haml
+++ b/views/case-studies/big-and-bold.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage2
+    .page-id#big-and-bold
 
       = haml :"sub-navigation"
       = haml :"case-studies/big-and-bold/header"
