--- a/views/case-studies/campaigns/video.haml
+++ b/views/case-studies/campaigns/video.haml
@@ -3,7 +3,7 @@
   .lity-iframe-container.lity-hide
     %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/203277091"}
 
-  %a.play-btn{"data-lity" => "", :href => "//vimeo.com/"}
+  %a.play-btn{"data-lity" => "", :href => "//vimeo.com/180070293"}
     %p Play!
 
   .overlay
