--- a/views/case-studies/digital-influencer/solution_section.haml
+++ b/views/case-studies/digital-influencer/solution_section.haml
@@ -30,9 +30,9 @@
                 %p
                   Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
 
-              .four.two-thirds.columns
-                .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
+              .five.columns
+                .embed-container.squash.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -61,9 +61,9 @@
                   Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
 
 
-              .four.two-thirds.columns
-                .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
+              .five.columns
+                .embed-container.squash.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214293764?background=1", :webkitallowfullscreen => ""}
 
 .section
   .sub-section.sub-section-mobile
@@ -75,7 +75,7 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -113,7 +113,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/214296255?background=1", :webkitallowfullscreen => ""}
                 .sub
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
@@ -148,7 +148,7 @@
             .row
               .five.columns.media-mobile
                 .embed-container.mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
 
               .seven.columns.quick-expand
                 .quote.quote-long
@@ -174,7 +174,7 @@
                   %br National Lottery Promotions Unit
               .five.offset-by-one.columns
                 .embed-container.mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/183651482?background=1", :webkitallowfullscreen => ""}
 
 
 
