--- a/views/case-studies/digital-strategy.haml
+++ b/views/case-studies/digital-strategy.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage2
+    .page-id#digital-strategy
 
       = haml :"sub-navigation"
       = haml :"case-studies/digital-strategy/header"
