--- a/views/case-studies/digital-strategy/solution_section.haml
+++ b/views/case-studies/digital-strategy/solution_section.haml
@@ -28,9 +28,10 @@
 
                 %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
 
-      .four.offset-by-seven.columns.ksi.media-mobile
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/digital-strategy/solution-1.jpeg"}
+              .five.columns
+                .embed-container.media-mobile.squash
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175022?background=1", :webkitallowfullscreen => ""}
+
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -56,9 +57,10 @@
 
                 %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
 
-      .four.offset-by-seven.columns.ksi
-        .ksi-img
-          %img.image{:src => "/assets/img/case-studies/digital-strategy/solution-1.jpeg"}
+              .five.columns
+                .embed-container.media-mobile.squash
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175022?background=1", :webkitallowfullscreen => ""}
+
 
 .section
   .sub-section.sub-section-mobile
@@ -67,15 +69,11 @@
         .middle
           .inner
             .row
-              .five.columns
-
+              .four.columns
                 .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175345?background=1", :webkitallowfullscreen => ""}
 
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://www.youtube.com/embed/yV3Eq3EINK8", :webkitallowfullscreen => ""}
-                .sub.media-mobile
-                  NEED COPY
-
-              .seven.columns
+              .eight.columns
 
                 %h2 Athlete Profiles
                 %p As part of their base content we sought to raise the profile of all of their athletes. We did this by creating highly personable snapshots of all of their athletes. A unique look at their personalities that would help to build a relationship with Tri’s growing communities.
@@ -94,9 +92,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://www.youtube.com/embed/yV3Eq3EINK8", :webkitallowfullscreen => ""}
-                .sub
-                  NEED COPY
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175345?background=1", :webkitallowfullscreen => ""}
 
               .seven.columns
 
@@ -116,8 +112,8 @@
           .inner
             .row
               .five.columns.media-mobile
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
+                .embed-container.long
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175492?background=1", :webkitallowfullscreen => ""}
 
               .seven.columns
                 %h2 Membership
@@ -148,8 +144,8 @@
                 %p As a result, British Triathlon’s content has transformed their online presence and allowed them to position themselves as a leading sporting body in British sport.
 
               .five.columns
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?background=1", :webkitallowfullscreen => ""}
+                .embed-container.long
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/215175492?background=1", :webkitallowfullscreen => ""}
 
 
 
