--- a/views/case-studies/small-and-nimble.haml
+++ b/views/case-studies/small-and-nimble.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage2
+    .page-id#small-and-nimble
 
       = haml :"sub-navigation"
       = haml :"case-studies/small-and-nimble/header"
