--- a/views/case-studies/campaigns.haml
+++ b/views/case-studies/campaigns.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage2
+    .page-id#campaigns
 
       = haml :"sub-navigation"
       = haml :"case-studies/campaigns/header"
