--- a/views/case-studies/campaigns/problem.haml
+++ b/views/case-studies/campaigns/problem.haml
@@ -16,23 +16,43 @@
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand Panasonic:
-                  %p.chat You guys seem alright! Wanna work on a UGC campaign for us?
+                  %p.chat
+                    You guys seem alright! Wanna work on a
+                    %b UGC campaign
+                    for us?
                 .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
                   %p.brand Tanjun:
-                  %p.chat YES! We would like that very much. Thank you!
+                  %p.chat
+                    YES! We would like that very much.
+                    %b Thank you!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand Panasonic:
-                  %p.chat Great! We want you to develop a campaign around Team GB’s ‘Superfans’. Aim is to create excitement around the support for Team GB, building up to and during the Olympic Games.
+                  %p.chat
+                    Great! We want you to
+                    %b develop a campaign around Team GB’s ‘Superfans’.
+                    Aim is to create
+                    %b excitement
+                    around the
+                    %b support for Team GB
+                    , building up to and during the Olympic Games.
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand Tanjun:
-                  %p.chat Well that sounds A…mazing! Any other requirements?
+                  %p.chat
+                    Well that sounds
+                    %b A…mazing!
+                    Any other requirements?
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
                   %p.brand Panasonic:
-                  %p.chat Yep! You need to put the Panasonic brand at the heart of this period of celebration and support.
+                  %p.chat
+                    Yep! You need to put the Panasonic
+                    %b brand at the heart
+                    of this period of
+                    %b celebration
+                    and support.
 
 
 
@@ -48,20 +68,34 @@
               .chat-block
                 .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
                   %p.brand Tanjun:
-                  %p.chat We thought you might say that! Don’t worry! We know exactly what needs to be done here. To the Bat Cave!!
+                  %p.chat
+                    We thought you might say that!
+                    %b Don’t worry!
+                    We know exactly what needs to be done here.
+                    %b To the Bat Cave!!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
                   %p.brand Panasonic:
-                  %p.chat Errr…you have a bat cave? Maybe we’re paying you too much?
+                  %p.chat
+                    %b Errr…
+                    you have a bat cave? Maybe we’re paying you too much?
                 .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
                   %p.brand Tanjun:
-                  %p.chat It’s not strictly a cave. More an office/studio thingy with an iMac and a collection of tatty 80s film memorabilia!
+                  %p.chat
+                    It’s not strictly a
+                    %b cave
+                    \. More an office/studio thingy with an iMac and a collection of
+                    %b tatty 80s film memorabilia!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
                   %p.brand Panasonic:
-                  %p.chat Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more! Now get to work monkeys!
+                  %p.chat
+                    Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more!
+                    %b Now get to work monkeys!
                 .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
                   %p.brand Tanjun:
-                  %p.chat Monkeys!!! To your typewriters!!
+                  %p.chat
+                    %b Monkeys!!!
+                    To your typewriters!!
