--- a/views/case-studies/campaigns/solution_section.haml
+++ b/views/case-studies/campaigns/solution_section.haml
@@ -67,7 +67,7 @@
               .five.columns
 
                 .embed-container.long.media-mobile
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub.media-mobile
                   NEED COPY
 
@@ -93,7 +93,7 @@
               .five.columns
 
                 .embed-container.long
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "https://player.vimeo.com/video/195614777?background=1", :webkitallowfullscreen => ""}
                 .sub
                   NEED COPY
 
