--- a/views/case-studies/digital-influencer/problem.haml
+++ b/views/case-studies/digital-influencer/problem.haml
@@ -16,23 +16,49 @@
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
                   %p.brand The National Lottery:
-                  %p.chat It’s the National Lottery Awards!!!! Massive TV show on BBC One and a huuuge annual campaign. We need content! LOT’S OF CONTENT! GOOD CONTENT! HELP!!!
+                  %p.chat
+                    It’s the National Lottery Awards!!!!
+                    %b Massive TV show on BBC One
+                    and a
+                    %b huuuge annual
+                    campaign. We need content! LOT’S OF CONTENT!
+                    %b GOOD CONTENT! HELP!!!
                 .highlight.highlight-pink.triangle-border.raised.right.chat-1-2.chat-right
                   %p.brand Tanjun:
-                  %p.chat Ain’t no thing like a monkey on a swing!
+                  %p.chat
+                    Ain’t no thing like a
+                    %b monkey on a swing!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
                   %p.brand The National Lottery:
-                  %p.chat Errrr, thanks! We need to reach as many people as possible. Like zillions of ‘em!
+                  %p.chat
+                    Errrr, thanks! We need to
+                    %b reach as many people as possible.
+                    Like
+                    %b zillions
+                    of ‘em!
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
                   %p.brand Tanjun:
-                  %p.chat Pah! We take your zillions and raise you to gatrillion zillion chillion! Aaaand if we can’t deliver that, how about a few hundred thousand instead?
+                  %p.chat
+                    Pah! We take your
+                    %b zillions
+                    and raise you to
+                    %b gatrillion zillion chillion!
+                    Aaaand if we can’t deliver that, how about a
+                    %b few hundred thousand
+                    instead?
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
                   %p.brand The National Lottery:
-                  %p.chat Yeah that’ll do!
+                  %p.chat
+                    %b Yeah
+                    that’ll do!
                 .highlight.highlight-pink.triangle-border.right.chat-1-6.chat-right
                   %p.brand Tanjun:
-                  %p.chat Consider it done! *dismounts swing*
+                  %p.chat
+                    Consider it done!
+                    *
+                    %b dismounts swing
+                    *
