--- a/views/case-studies/short-form.haml
+++ b/views/case-studies/short-form.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage2
+    .page-id#short-form
 
       = haml :"sub-navigation"
       = haml :"case-studies/short-form/header"
