--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: "stylesheet"}/
 
-    #fullpage1
+    .page-id#home-page
 
       = haml :navigation
       = haml :hero
