Favicon and title

--- a/assets/css/case-studies.sass
+++ b/assets/css/case-studies.sass
@@ -9,6 +9,11 @@
 h1.blue
   color: $pink
 
+.result-additional
+  text-align: center
+  padding-top: 1em
+  display: block
+
 .result
   position: absolute
   top: 35%
@@ -43,6 +48,7 @@ h1.blue
     .result
       top: 30%
 
+
 @media (max-width: 410px)
   .result-block
     padding: 0
@@ -62,6 +68,8 @@ h1.blue
     background: url("img/heart-blue-wide.png") no-repeat bottom center
     background-size: contain
 
+  .result-additional
+    display: none
 
 
 
