--- a/views/case-studies/campaigns/result.haml
+++ b/views/case-studies/campaigns/result.haml
@@ -27,6 +27,7 @@
               .result
                 %h5 600
                 %p Superfans
+          .row
+            %h2.pink.result-additional Media Coverage: Future Sport  |  Digital Sport  |  Campaign  |  The Drum
 
-          Media Coverage: Future Sport / Digital Sport / Campaign / The Drum
 
