--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -57,6 +57,10 @@ b
   font-family: 'BodyBold'
   letter-spacing: 0.02em
 
+
+a
+  color: inherit
+
 .quote
   font-family: 'Header'
   color: white
@@ -65,7 +69,7 @@ b
   letter-spacing: 0.02em
 
 .quote-long
-  font-size: 1.3em
+  font-size: 2.2em
 
 .auth
   font-family: 'BodyBold'
@@ -109,7 +113,7 @@ b
       font-weight: 900
       font-size: 1.2em
       text-decoration: none
-      letter-spacing: 0.04em
+      letter-spacing: 0.02em
 
 .hero-header
   p
@@ -140,6 +144,10 @@ b
   color: white
   letter-spacing: 0.02em
 
+@media (max-width: 2000px)
+  .quote-long
+    font-size: 1.7em
+
 @media (max-width: 1800px)
 
   p
@@ -147,6 +155,7 @@ b
 
   .button
     font-size: 1.1em
+
 
 @media (max-width: 1700px)
 
@@ -177,6 +186,9 @@ b
 
 @media (max-width: 1300px)
 
+  .quote-long
+    font-size:  1.3em
+
   h1
     font-size: 1.6em
 
@@ -205,7 +217,7 @@ b
 @media (max-width: 1000px)
   .result-block
     p
-      font-size: 0.8em
+      font-size: 0.7em
 
     h5
       font-size: 2em
