--- a/assets/css/problem.sass
+++ b/assets/css/problem.sass
@@ -66,11 +66,35 @@
     color: $lightblue
     font-family: 'BodyBold'
 
-    &:before
-      background: url("img/case-studies/lotter-pixel.png")
-      background-size: 100%
   b
     color: $lightblue
+
+
+.lottery
+  &:before
+    background: url("img/case-studies/lottery-pixel.png")
+    background-size: 100%
+
+.tanjun
+  &:before
+    background: url("img/case-studies/tanjun-pixel.png")
+    background-size: 100%
+
+.tri
+  &:before
+    background: url("img/case-studies/tri-pixel.png")
+    background-size: 100%
+
+.team-gb
+  &:before
+    background: url("img/case-studies/team-gb-pixel.png")
+    background-size: 100%
+
+.panasonic
+  &:before
+    background: url("img/case-studies/panasonic-pixel.png")
+    background-size: 100%
+
 
 .chat
   b
@@ -90,10 +114,6 @@
   .brand
     color: $pink
     font-family: 'BodyBold'
-
-    &:before
-      background: url("img/case-studies/tanjun-pixel.png")
-      background-size: 100%
 
   b
     color: $pink
