--- a/views/404.haml
+++ b/views/404.haml
@@ -1,5 +1,5 @@
 !!!
-%html.fullpage-false
+%html
   %head
     %meta{content: 'text/html; charset=utf-8', 'http-equiv' => 'content-type'}/
     %meta{:content => 'width=device-width', :name => 'viewport', :'initial-scale' => '1.0'}/
@@ -19,20 +19,41 @@
     %title Tanjun Media
     %link{href: '/assets/application.css', rel: 'stylesheet'}/
 
-  %body
+  %body.not-found
 
     /[if IE]
       %link{href: '/assets/css/ie.css', rel: 'stylesheet'}/
 
-    .page-id#home-page
+    .navigation.secondary-navigation
+      .desktop-nav
+        %ul.nav#nav1
+          %li
+            %a{:href => "/"}
+              %img.nav-back{:src => "/assets/img/CombinationMarkV1Pink.png"}
 
-      = haml :navigation
-      = haml :hero
-      = haml :reel
-      = haml :about
-      = haml :work
-      = haml :clients
-      = haml :contact
+    .section
+      .outer
+        .middle
+          .inner
+            .surprise
+              %h1
+                Look behind you
+                %br
+                a Three-Headed Monkey!
+              %img.image{:src => "/assets/img/doesnotexist.gif"}
+              %p
+                %b 404
+                %br
+                What you are looking for does not exist!
+                %br
+                Return to
+                %a{href: "/"} tanjunmeida.com
+
+
+
+
+
+
 
   %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
   %script{ src: '/assets/application.js' }
