--- a/views/case-studies/big-and-bold/problem.haml
+++ b/views/case-studies/big-and-bold/problem.haml
@@ -15,7 +15,7 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     Hey! Can you communicate that over
                     %b 1300
@@ -24,28 +24,28 @@
                     , making them some of the best athletes in the
                     %b world?
                 .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     %b Hell yeah
                     we can! No worries!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     %b Awesome!
                     Can you communicate it to a completely new
                     %b young audience
                     that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Ha! Young people hey, lol. Yep,
                     %b no worries.
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     Also, can you raise awareness that as well as athletes,
                     %b The National Lottery
@@ -64,23 +64,23 @@
 
               .chat-block
                 .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat Right! Yeah, we’ll add that to the list.
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     Oh,
                     %b one
                     other thing…
                 .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat Yeah, sure, go for it!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     You’ll need to also generate over
                     %b 2 million views
@@ -89,7 +89,7 @@
                     brand as well as driving significant engagement across our
                     %b new social channels.
                 .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     \*gulp*
                     %b Consider it done!
