--- a/views/case-studies/digital-influencer/problem.haml
+++ b/views/case-studies/digital-influencer/problem.haml
@@ -15,7 +15,7 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     It’s the National Lottery Awards!!!!
                     %b Massive TV show on BBC One
@@ -24,14 +24,14 @@
                     campaign. We need content! LOT’S OF CONTENT!
                     %b GOOD CONTENT! HELP!!!
                 .highlight.highlight-pink.triangle-border.raised.right.chat-1-2.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Ain’t no thing like a
                     %b monkey on a swing!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     Errrr, thanks! We need to
                     %b reach as many people as possible.
@@ -39,7 +39,7 @@
                     %b zillions
                     of ‘em!
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Pah! We take your
                     %b zillions
@@ -51,12 +51,12 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
-                  %p.brand The National Lottery:
+                  %p.brand.lottery The National Lottery:
                   %p.chat
                     %b Yeah
                     that’ll do!
                 .highlight.highlight-pink.triangle-border.right.chat-1-6.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Consider it done!
                     *
