--- a/views/case-studies/small-and-nimble/problem.haml
+++ b/views/case-studies/small-and-nimble/problem.haml
@@ -15,21 +15,21 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
-                  %p.brand Team GB
+                  %p.brand.team-gb Team GB:
                   %p.chat
                     Brazil.
                     %b Olympic Preparation Camp.
                     Team GB athletes.
                     %b Make stuff?
                 .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Yes, yes...aaaand
                     %b yes!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
-                  %p.brand Team GB
+                  %p.brand.team-gb Team GB:
                   %p.chat
                     Cool! You’ll have very
                     %b limited access and time
@@ -37,7 +37,7 @@
                     %b super reactive and think on your feet!
                     Do monkeys even have feet?
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     %b Yes!
                     Yes we do! Thank you very much!
@@ -54,24 +54,24 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-1.chat-left-2
-                  %p.brand Team GB
+                  %p.brand.team-gb Team GB:
                   %p.chat
                     Also, we need to tell the story of the Team GB Olympic prep camp. The team behind the team.
                     %b It’s the first time we’ve done this, so don’t mess it up!!
                 .highlight.highlight-pink.triangle-border.right.chat-2-2.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     We’re highly professional, talented and handsome monkeys!
                     %b We’ve got this!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-3.chat-left-2
-                  %p.brand Team GB
+                  %p.brand.team-gb Team GB:
                   %p.chat
                     Good! Anyway, swing on down to Belo Horizonte and we’ll see you there.
                     %b It’s gonna be some summer!
                 .highlight.highlight-pink.triangle-border.right.chat-2-4.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     *cue
                     %b frantic swinging
