--- a/views/contact.haml
+++ b/views/contact.haml
@@ -1,4 +1,4 @@
-.section#getInTouch
+.section#getInTouchNav
   .sub-section
     .row.wide-row
       .twelve.columns.section-colums
@@ -29,8 +29,10 @@
               %img{:src => "/assets/img/social/social2.png"}
             %a{:href => "https://www.instagram.com/tanjunmediauk/", :target => "_blank"}
               %img{:src => "/assets/img/social/social3.png"}
-            %a{:href => "https://vimeo.com/tanjunmedia", :target => "_blank"}
+            %a{:href => "https://twitter.com/tanjunmedia", :target => "_blank"}
               %img{:src => "/assets/img/social/social4.png"}
+            %a{:href => "https://vimeo.com/tanjunmedia", :target => "_blank"}
+              %img{:src => "/assets/img/social/social5.png"}
           %p.right
             COMPANY NO: 10184325
       .row.footer-section
