--- a/views/sub-navigation.haml
+++ b/views/sub-navigation.haml
@@ -2,5 +2,5 @@
   .desktop-nav
     %ul.nav#nav1
       %li
-        %a{:href => "/"}
+        %a{:href => "/#whatWeCreate"}
           %img.nav-back{:src => "../assets/img/back.png"}
