--- a/views/work-sections/work_section.haml
+++ b/views/work-sections/work_section.haml
@@ -1,4 +1,4 @@
-.section#whatWeCreate
+.section#whatWeCreateNav
   .sub-section
     - if header == true
       = haml :'work-sections/bolt', :locals => { :header => true, :text => "What we create" }
