--- a/assets/css/nav.sass
+++ b/assets/css/nav.sass
@@ -24,15 +24,17 @@ label
   top: 0
   left: 0
   text-align: center
+  z-index: 100
 
 .nav
+  max-width: 45%
   list-style: none
   display: inline-block
   margin-top: 2em
   li
     display: inline-block
     float: left
-    padding: 0.5em 1.5em
+    padding: 0.5em 1.2em
     a
       color: white
 
