--- a/views/case-studies/campaigns/problem.haml
+++ b/views/case-studies/campaigns/problem.haml
@@ -15,20 +15,20 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-1.chat-left
-                  %p.brand Panasonic:
+                  %p.brand.panasonic Panasonic:
                   %p.chat
                     You guys seem alright! Wanna work on a
                     %b UGC campaign
                     for us?
                 .highlight.highlight-pink.triangle-border.right.chat-1-2.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     YES! We would like that very much.
                     %b Thank you!
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-3.chat-left
-                  %p.brand Panasonic:
+                  %p.brand.panasonic Panasonic:
                   %p.chat
                     Great! We want you to
                     %b develop a campaign around Team GB’s ‘Superfans’.
@@ -38,7 +38,7 @@
                     %b support for Team GB
                     , building up to and during the Olympic Games.
                 .highlight.highlight-pink.triangle-border.right.chat-1-4.chat-right
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     Well that sounds
                     %b A…mazing!
@@ -46,7 +46,7 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-1-5.chat-left
-                  %p.brand Panasonic:
+                  %p.brand.panasonic Panasonic:
                   %p.chat
                     Yep! You need to put the Panasonic
                     %b brand at the heart
@@ -67,7 +67,7 @@
 
               .chat-block
                 .highlight.highlight-pink.triangle-border.right.single.chat-2-1.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     We thought you might say that!
                     %b Don’t worry!
@@ -76,12 +76,12 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-2.chat-left-2
-                  %p.brand Panasonic:
+                  %p.brand.panasonic Panasonic:
                   %p.chat
                     %b Errr…
                     you have a bat cave? Maybe we’re paying you too much?
                 .highlight.highlight-pink.triangle-border.right.chat-2-3.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     It’s not strictly a
                     %b cave
@@ -90,12 +90,12 @@
 
               .chat-block
                 .highlight.highlight-blue.triangle-border.left.chat-2-4.chat-left-2
-                  %p.brand Panasonic:
+                  %p.brand.panasonic Panasonic:
                   %p.chat
                     Oh!! Well, that’s disappointing!! Keep all of the money. It sounds like you need it. In fact, have some more!
                     %b Now get to work monkeys!
                 .highlight.highlight-pink.triangle-border.right.chat-2-5.chat-right-2
-                  %p.brand Tanjun:
+                  %p.brand.tanjun Tanjun:
                   %p.chat
                     %b Monkeys!!!
                     To your typewriters!!
